<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">BatteryManager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="refresh_normal">normal</string>
    <string name="refresh_cpu">cpu</string>
    <string name="power_screen">显示屏</string>
    <string name="power_wifi">Wi-Fi</string>
    <string name="power_bluetooth">蓝牙</string>
    <string name="power_cell">手机信号</string>
    <string name="power_phone">语音通话</string>
    <string name="power_idle">手机待机</string>
    <string name="process_kernel_label">Android OS</string>
    <string name="process_mediaserver_label">媒体服务器</string>
    <string name="battery_history_days" translatable="false"><xliff:g id="DAYS">%1$d</xliff:g> 天 <xliff:g id="HOURS">%2$d</xliff:g> 小时 <xliff:g id="MINUTES">%3$d</xliff:g> 分 <xliff:g id="SECONDS">%4$d</xliff:g> 秒</string>
    <string name="battery_history_hours" translatable="false"><xliff:g id="HOURS">%1$d</xliff:g> 小时 <xliff:g id="MINUTES">%2$d</xliff:g> 分 <xliff:g id="SECONDS">%3$d</xliff:g> 秒</string>
    <string name="battery_history_minutes" translatable="false"><xliff:g id="MINUTES">%1$d</xliff:g> 分 <xliff:g id="SECONDS">%2$d</xliff:g> 秒</string>
    <string name="battery_history_seconds" translatable="false"><xliff:g id="SECONDS">%1$d</xliff:g> 秒</string>
    <string name="battery_info_status_charging_ac">（交流电）</string>
    <string name="battery_info_status_charging_usb">(USB)</string>
    <string name="battery_info_status_charging_wireless">(无线充电)</string>
    <string name="battery_info_status_discharging">正在耗电</string>
    <string name="battery_info_status_not_charging">未在充电</string>
    <string name="battery_info_status_full">电量充足</string>
    <string name="battery_info_status_unknown">未知</string>
    <string name="battery_info_status_charging">正在充电</string>
    <string name="power_usage_level_and_status" translatable="false"><xliff:g id="LEVEL">%1$s</xliff:g> - <xliff:g id="STATUS">%2$s</xliff:g></string>
    <string name="battery_status_temperature">状态界面的温度显示</string>
    <string name="battery_status_level">状态界面的电量显示</string>
    <string name="remain_usable_time" translatable="false">剩余可用时间</string>
    <string name="remain_time" translatable="false">待机可用时间</string>
    <string name="needtime_of_charging">预计充电剩余</string>
    <string name="battery_info_analyse">电池信息分析</string>
    <string name="phone_type">手机型号：</string>
    <string name="connect_status">连接情况：</string>
    <string name="battery_status">电池状态：</string>
    <string name="temperature_status">温度状态：</string>
    <string name="battery_voltage">电池电压：</string>
    <string name="battery_technology">电池技术：</string>
    <string name="find_tab_name">发现</string>
    <string name="specialty_tab_name">高级</string>
    <string name="battery_dally_maintenance">每日电池检测和维护</string>
    <string name="location_on_or_off">定 位</string>
    <string name="wifi_on_or_off" translatable="false">WIFI</string>
    <string name="data_on_or_off">3G/4G</string>
    <string name="bluetooth_on_or_off">蓝 牙</string>
    <string name="heatpoint_on_or_off">热 点</string>
    <string name="more_power_saving">更省电</string>
    <string name="ranking_list">24小时耗电排行榜</string>
    
</resources>
